some fixing on the being pool